--- a/staticfiles/scss/common/common_classes.scss
+++ b/staticfiles/scss/common/common_classes.scss
@@ -33,6 +33,19 @@
 	height: 40px;
 	text-align: center;
 	width: 100%;
+
+	
+}
+
+.hide-cursor{
+	font-weight: 600;
+	color: transparent;
+	text-shadow: 0 0 0 black;
+
+	&:focus{
+		outline: none;
+
+	}
 }
 
 .search-cabin-input:focus{
@@ -56,4 +69,15 @@
 
 .hide{
 	display: none;
+}
+
+
+
+.normal-button{
+	background-color: $normal-button-color;
+	border: 0px;
+
+	color: white;
+	font-weight: $font-semibold;
+
 }
