--- a/staticfiles/scss/common/variables.scss
+++ b/staticfiles/scss/common/variables.scss
@@ -17,3 +17,8 @@ $font-semibold: 500;
 $font-bold: 700;
 
 $font-semilight-color: #6E6E6E;		//color used for some semilight fonts
+
+
+$square-button-color: #D1DAFF;
+
+$normal-button-color: #3A8437;
