setup data connection from home view to home template on POST request.

--- a/main/templates/main/cabin_search_box.html
+++ b/main/templates/main/cabin_search_box.html
@@ -1,5 +1,5 @@
 <div id="search-cabin-box" class="default-box">
-	<h4 class="default-sub-header">Hytter</h4>
+	<h4 class="default-sub-header">Hytte</h4>
 	<div class="container search-cabin-form">
 		<div class="row">
 			<div id="from-date" class="search-cabin-form-inputgroup col-sm">
