--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -66,11 +66,11 @@
 			</div>
 		</nav>
 
+		<div id="body">
+			{% block body %}
 
-		{% block body %}
-
-		{% endblock %}
-
+			{% endblock %}
+		</div>
 		<script
   			src="https://code.jquery.com/jquery-3.3.1.min.js"
   			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
