--- a/main/templates/main/show_cabins.html
+++ b/main/templates/main/show_cabins.html
@@ -12,47 +12,90 @@
 		{% endif %}
 		<div id="cabin-search-result">
 			{% for key, cabin in cabins.items %}
-				<div class="cabin-accordion">
-					<div id="label-{{ cabin.number }}" class="accordion-label-box" onClick="accordionClick({{ cabin.number }})" data-toggle="collapse" data-target="#content-{{ cabin.number }}" aria-controls="content-{{ cabin.number }}">
-						<h5>
-							<button class="accordion-label" >
-								<i id="right-arrow-{{ cabin.number }}" class="fas fa-chevron-right cabin-acc-right"></i>
-								<i id="down-arrow-{{ cabin.number }}" class="fas fa-chevron-down cabin-acc-down hide "></i>
-								<span class="default-link accordion-label-header">{{ cabin.title }} [{{cabin.number}}]</span>
-							</button>
-						</h5>
-					</div>
-					<div id="content-{{ cabin.number }}" class="accordion-content collapse" data-parent="#cabin-search-result" aria-labelledby="label-{{ cabin.number }}" >
-						<div>
-							<div id="carousel_cabin_{{ cabin.number }}" class="carousel slide cabin-image-carousel" data-ride="carousel">
-								<div class="carousel-inner">
-									{% for  img in cabin.images %}
-										{% if forloop.counter0 == 0 %}
-											<div class="carousel-item active">
-												<img class="d-block w-100" src="{% get_media_prefix %}{{ img }}">
-											</div>
-										{% else %}
-											<div class="carousel-item">
-												<img class="d-block w-100" src="{% get_media_prefix %}{{ img }}">
-											</div>
-										{% endif %}
-									{% endfor %}
-									<p>{{ cabin.short_description }}</p>
-								</div>
-								<a class="carousel-control-prev" href="#carousel_cabin_{{ cabin.number }}" role="button" data-slide="prev">
-									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="carousel-control-next" href="#carousel_cabin_{{ cabin.number }}" role="button" data-slide="next">
-									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
-							</div>
 
-							
+				<div class="cabin-result">
+					{% if forloop.counter0 == 0 %}
+						<div id="cabin-result-label-{{ cabin.number }}" class="cabin-result-label hide" onClick="showCabin({{ cabin.number }})">
+					{% else %}
+						<div id="cabin-result-label-{{ cabin.number }}" class="cabin-result-label" onClick="showCabin({{ cabin.number }})">
+					{% endif %}
+							<h5 class="cabin-result-label-header">
+								<i id="right-arrow-{{ cabin.number }}" class="fas fa-chevron-right cabin-acc-right"></i>
+								{{ cabin.title }} [{{cabin.number}}]
+							</h5>
 						</div>
-					</div>
+					{% if forloop.counter0 == 0 %}
+						<div id="cabin-result-img-{{ cabin.number }}" class="carousel slide cabin-result-img" data-ride="carousel" data-interval="false">
+					{% else %}
+						<div id="cabin-result-img-{{ cabin.number }}" class="carousel slide cabin-result-img hide" data-ride="carousel" data-interval="false">
+					{% endif %}
+	                        <div class="carousel-inner">
+								{% for  img in cabin.images %}
+									{% if forloop.counter0 == 0 %}
+										<div class="carousel-item active">
+											<img class="d-block w-100" src="{% get_media_prefix %}{{ img }}">
+										</div>
+									{% else %}
+										<div class="carousel-item">
+											<img class="d-block w-100" src="{% get_media_prefix %}{{ img }}">
+										</div>
+									{% endif %}
+								{% endfor %}
+							</div>
+							<a class="carousel-control-prev img-slide-button-region" href="#cabin-result-img-{{ cabin.number }}" role="button" data-slide="prev">
+	                        	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	                        	<span class="sr-only">Previous</span>
+		                    </a>
+		                    <a class="carousel-control-next img-slide-button-region" href="#cabin-result-img-{{ cabin.number }}" role="button" data-slide="next">
+		                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		                        <span class="sr-only">Next</span>
+		                    </a>
+						</div>
+
+					{% if forloop.counter0 == 0 %}
+						<div id="cabin-result-content-{{ cabin.number }}" class="cabin-result-content">
+					{% else %}
+						<div id="cabin-result-content-{{ cabin.number }}" class="cabin-result-content hide">
+					{% endif %}
+							<div class="row">
+								<div class="col-1">
+								<h3><i id="right-arrow-{{ cabin.number }}" class="fas fa-chevron-down cabin-acc-right"></i></h3>
+								</div>
+								<div class="col-11">
+									<h3 class="cabin-content-header">{{ cabin.title }}</h3>
+									<p>{{ cabin.short_description }}</p>
+									<p class="default-link more-link">Mer om hytten</p>
+									<div class="row">
+										<div class="col-6">
+											<table class="col-6">
+											{% for eqp in cabin.equipment %}
+												{% if forloop.counter0|divisibleby:2 %}
+													<div class="row col-4">
+														<tr class="col-12">
+															<td class="eqp-data col-6" >{{ eqp }}</td>
+												{% else %}
+															<td class="eqp-data col-6">{{ eqp }}</td>
+														</tr>
+													</div>
+												{% endif %}
+											{% endfor %}
+											</table>
+										</div>
+										<div class="col-6 center-content">
+											<div class="choose-cabin-container">
+												<h4 class="cabin-price">fra {{ cabin.price }} kr</h4>
+												<p class="cabin-per-night-text">per natt</p>
+
+												<button style="" class="normal-button choose-cabin-button">Velg hytte</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 				</div>
+
+				
 			{% endfor %}
 		</div>
 	</div>
