--- a/staticfiles/scss/show_cabins.scss
+++ b/staticfiles/scss/show_cabins.scss
@@ -18,9 +18,91 @@
 	margin: auto;
 }
 
-#cabin-accordion{
+
+
+
+
+
+
+
+.cabin-result-img{
+	width: 100%;
+}
+
+.cabin-result-label{
+	background-color: white;
+	border: 1px solid grey;
+	padding: 10px;
+	margin-bottom: 5px;
+
+	&:hover{
+		cursor: pointer;
+	}
+}
+
+.cabin-result-label-header{
+	&:hover{
+		cursor: pointer;
+	}
+}
+
+.cabin-result-content{
+	border: 1px solid grey;
+	border-top: 0px;
+	margin-bottom: 10px;
+	padding: 40px;
+
+	background-color: $accordion-hover-color;
+}
+
+.more-link{
+	line-height: 0%;
+}
+
+.cabin-content-header{
 
 }
+
+.img-slide-button-region{
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 10%;
+
+}
+
+.eqp-data{
+	white-space: nowrap;
+	//overflow: hidden;
+}
+
+.choose-cabin-button{
+	padding: 10px;
+	width: 100%;
+	text-align: center;
+
+}
+
+.choose-cabin-container{
+	background-color: #F1F1F1;
+	padding: 10px;
+	width: 90%;
+}
+
+.cabin-price{
+	text-align: center;
+	color: $normal-button-color;
+}
+
+.cabin-per-night-text{
+	text-align: center;
+	font-size: 14px;
+	color: #505050;
+	line-height: 0px;
+}
+
+
+
+
+
 
 .accordion-label{
 	border: 0px;
@@ -68,3 +150,11 @@
 	background-color: $accordion-hover-color;
 	border: 1px solid grey;
 }
+
+
+
+
+
+
+
+
