Worked on booking confirmation site.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -23,6 +23,7 @@
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/show_cabins.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/cabin_search_box.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_contact.scss" />
+			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/confirm_booking.scss" />
 		{% endcompress %} 
 
 		
