--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -76,6 +76,7 @@
 
   		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+  		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
@@ -84,12 +85,14 @@
 		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 		
-  		
+  		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/1.2.3/jquery.payment.min.js"></script>
 
 
 		<script src="{% static 'js/home.js'%}"></script>
 		<script src="{% static 'js/show_cabins.js'%}"></script>
 		<script src="{% static 'js/booking_contact.js'%}"></script>
+		<script src="{% static 'js/confirm_booking.js'%}"></script>
 
 	</body>
 
