--- a/staticfiles/scss/booking/booking_contact.scss
+++ b/staticfiles/scss/booking/booking_contact.scss
@@ -31,7 +31,18 @@
     width: 100%;
 }
 
-#continue-button{
+#continue-button{	
 	width: 100%;
 	padding: 10px;
+
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+.checkbox-box{
+	padding: 10px;
+}
+
+#main_form{
+	width: 100%;
 }
