--- a/main/templates/main/booking_contact_info.html
+++ b/main/templates/main/booking_contact_info.html
@@ -1,67 +1,41 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
+{% load crispy_forms_tags %}
 
 {% block body %}
 	<div id="contact-info-container" class="container .default-page-bg">
 		<div class="center-content">
-			<form action="{% url 'confirm_booking' %}" method="POST">
+			<form action="{% url 'payment_booking' %}" method="POST" id="main_form">
 				{% csrf_token %}
-				<div class="row contact-info-row">
-					<div class="col-12 contact-input-container">
-						<p class="default-input-header">Fullt navn</p>
-						{% render_field contactForm.name class+="default-input contact-input" %}
-					</div>
-				</div>
-				<div class="row contact-info-row">
-					<div class="col-12 contact-input-container">
-						<p class="default-input-header">E-postadresse</p>
-						{% render_field contactForm.email class+="default-input contact-input" %}
-					</div>
-				</div>
-				<div class="row contact-info-row">
-					<div id="contact-country-container" class="col contact-input-container" onClick="select('#country-input')" >
-						<p class="default-input-header">Land</p>
-						<div class="center-content">
-							{% render_field contactForm.country class+="default-input" id="country-input"%}
-							<i class="fa fa-chevron-down"></i>
-						</div>
-						
-					</div>
-					<div class="col contact-input-container">
-						<p class="default-input-header">Mobilnummer</p>
-						{% render_field contactForm.phone class+="default-input contact-input" %}
-					</div>
+				
+				<div class="row center-hor">
+					{% include 'main/input_field.html' with field=contactForm.name class_name='col-8' %}
 				</div>
 				<br>
-				<div class="row default-box booking-box">
-					<div class="col-1">
-						<div class="round">
-							<!--<input type="checkbox" id="late-arrival-checkbox" />-->
-							{% render_field contactForm.late_arrival %}
-						</div>
-					</div>
-					<div class="col">
-						Sen ankomst (etter 18:00)
-					</div>
+				<div class="row center-hor">
+					{% include 'main/input_field.html' with field=contactForm.email class_name='col-8' %}
 				</div>
 				<br>
-				<div class="row default-box booking-box">
-					<div class="col-1">
-						<div class="round">
-							{% render_field contactForm.accept_conditions %}
-						</div>
-					</div>
-					<div class="col">
-						Jeg har lest og godtatt <span class="default-link">prisbetingelsene</span>
-					</div>
+				<div class="row center-hor">
+						{% include 'main/input_field.html' with field=contactForm.country class_name='col-5' %}
+						{% include 'main/input_field.html' with field=contactForm.phone class_name='col-3' %}
 				</div>
-
-				<div class="row contact-info-row">
-					<div class="col-12">
+				<br>
+				<br>
+				<div class="row center-hor">
+					{% include 'main/checkbox_box.html' with id='late-arrival-checkbox' label='Sen ankomst (etter 18:00)' form_field=contactForm.late_arrival class_name='col-8' %}
+				</div>
+				<br>
+				<div class="row center-hor">
+					{% include 'main/checkbox_box.html' with id='accept-conditions-checkbox' label='Jeg har lest og godtatt <span class="default-link">prisbetingelsene</span>' form_field=contactForm.accept_conditions class_name='col-8' %}
+				</div>
+				
+				<br>
+				<div class="row center-hor">
+					<div class="col-8">
 						<button type="submit" id="continue-button" class="normal-button">Fortsett</button>
 					</div>
 				</div>
-				{{ chooseForm.as_p }}
 			</form>
 		</div>
 	</div>
