--- a/staticfiles/scss/booking/confirm_booking.scss
+++ b/staticfiles/scss/booking/confirm_booking.scss
@@ -3,8 +3,8 @@
 
 .date-header{
 	text-align: center;
-	font-weight: $font-semibold;
-	text-decoration: underline;
+	// font-weight: 500;
+	// text-decoration: underline;
 }
 
 #content-container{
@@ -14,6 +14,7 @@
 
 .change-link{
 	float: right;
+	font-size: 17px;
 }
 
 .booking-title{
@@ -35,6 +36,10 @@
 	}
 }
 
+.cabin-row{
+	padding: 5px;
+}
+
 #add-cabin-plus{
 	margin-right: 5px;
 	margin-top: 5px;
@@ -47,8 +52,18 @@
 	margin: auto;
 }
 
+.credit-card{
+	display: block;
+	//max-width: 100%;
+	max-height: 30px;
+	width: auto;
+	height: auto;
+}
 
-
+#payment-button{
+	width: 100%;
+	padding: 14px;
+}
 
 
 .input-group-addon {
