Working on rearranging booking workflow. Contact info will be gathered through stripe.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -23,7 +23,7 @@
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/show_cabins.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/cabin_search_box.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_contact.scss" />
-			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/confirm_booking.scss" />
+			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/payment_booking.scss" />
 		{% endcompress %} 
 
 		
@@ -93,7 +93,7 @@
 		<script src="{% static 'js/home.js'%}"></script>
 		<script src="{% static 'js/show_cabins.js'%}"></script>
 		<script src="{% static 'js/booking_contact.js'%}"></script>
-		<script src="{% static 'js/confirm_booking.js'%}"></script>
+		<script src="{% static 'js/payment_booking.js'%}"></script>
 
 	</body>
 
