--- a/main/templates/main/payment_booking.html
+++ b/main/templates/main/payment_booking.html
@@ -5,7 +5,7 @@
 <div class="default-page-bg">
 	<div class="container">
 		<br>
-		<p class="date-header">{{ booking.from_date }} - {{ booking.to_date }}</p>
+		<p class="date-header">{{ t_booking.from_date }} - {{ t_booking.to_date }}</p>
 
 		<div id="content-container">
 			<form action="{% url 'charge_booking' %}" method="POST" id="payment-form" >
@@ -49,66 +49,22 @@
 
 				<h3 class="center-hor">Betaling</h3>
 
-			    <div class="default-box">
-			    	<br>
-			    	<div class="row center-hor" style="width: 40%;margin:auto;">
-			    		<div class="col center-ver center-hor">
-			    			<img src="http://www.credit-card-logos.com/images/multiple_credit-card-logos-1/credit_card_logos_16.gif" class="credit-card" />
-			    		</div>
-			    	</div>
-			    	<br>
-				    <div class="row">
-				        <div class="col">
-	                        <div class="form-group">
-	                            <label for="cc-number" class="control-label mb-1">{{ form.card_number.label }}</label>
-	                        	{% render_field form.card_number id="cc-number" class="form-control cc-number identified visa" %}
-	                            <!--<input id="cc-number" name="cc-number" type="tel" class="form-control cc-number identified visa" required pattern="[0-9]{16}">-->
-	                            <span class="invalid-feedback">Enter a valid 16 digit card number</span>
-	                        </div>
-	                        <div class="row">
-	                            <div class="col-6">
-	                                <div class="form-group">
-	                                    <label for="cc-exp" class="control-label mb-1">Expiration</label>
-	                                    <input id="cc-exp" name="cc-exp" type="tel" class="form-control cc-exp" required placeholder="MM / YY" autocomplete="cc-exp">
-	                                    <span class="invalid-feedback">Enter the expiration date</span>
-	                                </div>
-	                            </div>
-	                            <div class="col-6">
-	                                <label for="x_card_code" class="control-label mb-1">Security code</label>
-	                                <div class="input-group">
-	                                    <input id="x_card_code" name="x_card_code" type="tel" class="form-control cc-cvc" required autocomplete="off">
-	                                    <span class="invalid-feedback order-last">Enter the 3-digit code on back</span>
-	                                    <div class="input-group-append">
-	                                        <div class="input-group-text">
-	                                        <span class="fa fa-question-circle fa-lg" data-toggle="popover" data-container="body" data-html="true" data-title="Security Code" 
-	                                        data-content="<div class='text-center one-card'>The 3 digit code on back of the card<div class='visa-mc-cvc-preview'></div></div>"
-	                                        data-trigger="hover"></span>
-	                                        </div>
-	                                    </div>
-	                                </div>
-	                            </div>
-	                        </div>
-				        </div>
-				    </div> 
-				    <div class="row center-hor hide" id="card-error-container" >
-				    	<div class="col">
-				    		<p id="card-error-text"></p>
-				    	</div>
-				    </div>
-			    </div>
+				
 			    <br>
 			    <div>
-			    	<button id="payment-button" class="normal-button" type="submit" >Fullfør</button>
+			    	<button id="payment-button" class="normal-button" >Fullfør</button>
 			    </div>
 			    <div class="hide">
-			    	{% render_field contact_form %}
+			    	<input name="t_booking_id" value="{{ t_booking.id }}" />
+			    	<input id="token" name="token" value="lol" />
 			    </div>
-			    
 			</form>
 		</div>
 	</div>
 
+	<p id="TOTAL-PRICE" class="hide">{{ t_booking.price }}</p>
 
+	
 
 
 
