Tentative- and Final-bookings now deriving from Booking superclass using Django-polymorphic. Payment token retrieving seems to be working.

--- a/main/templates/main/checkbox_box.html
+++ b/main/templates/main/checkbox_box.html
@@ -1,6 +1,6 @@
 {% load widget_tweaks %}
-<div class="row contact-info-row default-box {{ class_name }}">
-	<div class="row checkbox-box">
+<div class="default-box">
+	<div class="row cabin-row">
 		<div class="col-1">
 			<div class="round">
 					{% render_field form_field id=id %}
