--- a/staticfiles/scss/booking/payment_booking.scss
+++ b/staticfiles/scss/booking/payment_booking.scss
@@ -7,6 +7,12 @@
 	// text-decoration: underline;
 }
 
+#conditions-error{
+	color: red;
+	line-height: 0px;
+	margin-top: 15px;
+}
+
 #content-container{
 	width: 60%;
 	margin: auto;
