Payment now working!

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -24,6 +24,7 @@
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/cabin_search_box.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_contact.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/payment_booking.scss" />
+			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_confirmation.scss" />
 		{% endcompress %} 
 
 		
