Bookings now working! Added never_cache on BookingOverview view. Uses session variables so user can seemlesly use backbutton in browser from overview to show_cabins without making new tentative booking.

--- a/main/templates/main/booking_overview.html
+++ b/main/templates/main/booking_overview.html
@@ -71,7 +71,7 @@
 				<br>
 				
 			    <div>
-			    	<button id="payment-button" class="normal-button" >Fullfør</button>
+			    	<button id="payment-button" class="normal-button" >Neste</button>
 			    </div>
 			</form>
 		</div>
