--- a/main/templates/main/show_cabins.html
+++ b/main/templates/main/show_cabins.html
@@ -6,11 +6,19 @@
 	<div class="container">
 
 		<br>
-		<p id="date-header">{{ from_date }} - {{ to_date }}</p>
+		<div id="search-box" class="cabin-search-result hide">
+			{% include 'main/cabin_search_box.html' with form=cabin_search_form %}
+		</div>
+		<div class="cabin-search-result center-hor">
+			<span style="text-decoration: underline;">{{ from_date_str }} - {{ to_date_str }}</span> 
+			&nbsp;&nbsp;&nbsp;
+			<span class="default-link">Endre søk</span>
+		</div>
+
 		{% if info_header != "" %}
 			<p id="info-header">{{ info_header | safe }}</p>
 		{% endif %}
-		<div id="cabin-search-result">
+		<div class="cabin-search-result">
 			{% for key, cabin in cabins.items %}
 
 				<div class="cabin-result">
