--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -40,7 +40,9 @@
 	<body>
 		<nav class="navbar navbar-expand-lg fixed-top" id="global-navbar">
 			<div class="container-fluid">
-				<img id="nav-logo" src="{% static 'images/Logo_hvit_trans.png' %}">
+				<a href="{% url 'home' %}">
+					<img id="nav-logo" src="{% static 'images/Logo_hvit_trans.png' %}">
+				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
