Fixed bug with late_arrival.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -98,7 +98,7 @@
 		<script src="{% static 'js/home.js'%}"></script>
 		<script src="{% static 'js/show_cabins.js'%}"></script>
 		<script src="{% static 'js/booking_contact.js'%}"></script>
-		<script src="{% static 'js/payment_booking.js'%}"></script>
+		<script src="{% static 'js/booking_overview.js'%}"></script>
 
 	</body>
 
