--- a/staticfiles/scss/common/common_classes.scss
+++ b/staticfiles/scss/common/common_classes.scss
@@ -26,6 +26,12 @@ h1, h2, h3, h4, h5, h6, p, td{
 	}
 }
 
+.hover-pointer{
+	&:hover{
+		cursor: pointer;
+	}
+}
+
 .default-box{
 	border: 1px solid $default-box-border-color;
 	padding: 10px;
