--- a/main/templates/main/booking_overview.html
+++ b/main/templates/main/booking_overview.html
@@ -21,12 +21,13 @@
 							</div>
 						</div>
 					</div>
+					<br>
 				{% endfor %}
 
 				<br>
 				<div class="center-hor">
 					<div>
-						<i id="add-cabin-plus" class="fas fa-plus"></i>Legg til hytte
+						<a class="hover-pointer" onClick="AddCabin()" ><i id="add-cabin-plus" class="fas fa-plus"></i>Legg til hytte</a>
 					</div>
 				</div>
 
@@ -77,15 +78,22 @@
 		</div>
 	</div>
 
-	<form id="payment-form" action="{% url 'charge_booking' %}" method="POST" >
-		{% csrf_token %}
-		<input id="phone-field" name="phone" type="hidden" />
-		<input id="late-arrival-field" name="late_arrival" type="hidden" />
-
-		<input name="t_booking_id" value="{{ t_booking.id }}" type="hidden" />
-		<input id="TOTAL-PRICE" name="total_price" type="hidden" value="{{ t_booking.price }}" type="hidden" />
-		<input id="token" name="token" type="hidden" />
-	</form>
+	<div class="hide">
+		<form id="payment-form" action="{% url 'charge_booking' %}" method="POST" >
+			{% csrf_token %}
+			<input id="phone-field" name="phone" type="hidden" />
+			<input id="late-arrival-field" name="late_arrival" type="checkbox" />
+			<input id="t_booking_id" name="t_booking_id" value="{{ t_booking.id }}" type="hidden" />
+			<input id="TOTAL-PRICE" name="total_price" type="hidden" value="{{ t_booking.price }}" type="hidden" />
+			<input id="token" name="token" type="hidden" />
+		</form>
+		<form id="add-cabin-form" action="{% url 'show_cabins' %}" method="POST" >
+			{% csrf_token %}
+			<input name="t_booking_id" value="{{ t_booking.id }}" />
+			<input name="booking_action" value="add_cabin" />
+			{{ cabin_search_form }}
+		</form>
+	</div>
 
 
 	
