Created alert system. Added redirect with alert to booking overview when booking is not matching with session.

--- a/main/templates/main/booking_overview.html
+++ b/main/templates/main/booking_overview.html
@@ -86,6 +86,8 @@
 			<input id="t_booking_id" name="t_booking_id" value="{{ t_booking.id }}" type="hidden" />
 			<input id="TOTAL-PRICE" name="total_price" type="hidden" value="{{ t_booking.price }}" type="hidden" />
 			<input id="token" name="token" type="hidden" />
+			<input name="t_booking_JSON" value="{{ t_booking.JSON }}" />
+			{{ cabin_search_form }}
 		</form>
 		<form id="add-cabin-form" action="{% url 'show_cabins' %}" method="POST" >
 			{% csrf_token %}
