--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -69,7 +69,25 @@
 			</div>
 		</nav>
 
+		
+
+		
+
 		<div id="body">
+			{% if message %}
+				{% if message_type %}
+					<div id="alert-div" class="alert alert-{{ message_type }} alert-dismissible fade show" role="alert">
+				{% else %}
+					<div id="alert-div" class="alert alert-warning alert-dismissible fade show" role="alert">
+				{% endif %}
+						{% if message_starter %}<strong>{{ message_starter }}</strong>{% endif %}
+						{{ message }}
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+			{% endif %}
+
 			{% block body %}
 
 			{% endblock %}
