Added support for multiple alerts.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -71,22 +71,23 @@
 
 		
 
-		
+		<div id="alerts-div">
+			{% if alerts %}	
+				{% for alert in alerts %}
+					<div class="alert-div alert alert-primary alert-{{ alert.1 }} alert-dismissible fade show" role="alert">
 
-		<div id="body">
-			{% if message %}
-				{% if message_type %}
-					<div id="alert-div" class="alert alert-{{ message_type }} alert-dismissible fade show" role="alert">
-				{% else %}
-					<div id="alert-div" class="alert alert-warning alert-dismissible fade show" role="alert">
-				{% endif %}
-						{% if message_starter %}<strong>{{ message_starter }}</strong>{% endif %}
-						{{ message }}
+						<strong>{{ alert.2 }}</strong>
+						{{ alert.0 }}
 						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
+				{% endfor %}
 			{% endif %}
+		</div>
+
+		<div id="body">
+
 
 			{% block body %}
 
