--- a/staticfiles/scss/common/common_classes.scss
+++ b/staticfiles/scss/common/common_classes.scss
@@ -1,6 +1,10 @@
 @import 'variables';
 
 
+$z-index: (
+	alerts: 30,
+	body: 60,
+);
 
 h1, h2, h3, h4, h5, h6, p, td{
 	&:hover{
@@ -10,6 +14,7 @@ h1, h2, h3, h4, h5, h6, p, td{
 
 #body{
 	margin-top: $navbar-height;
+	z-index: map-get($z-index, body) 
 }
 
 #phone-layout{
@@ -29,6 +34,7 @@ h1, h2, h3, h4, h5, h6, p, td{
 	position: absolute;
 	width: 100%;
 	margin-top: 0px;
+	z-index: map-get($z-index, alerts)
 }
 
 .alert-div{
@@ -130,6 +136,10 @@ h1, h2, h3, h4, h5, h6, p, td{
 	}
 }
 
+
+.daterangepicker{
+	min-width: 500px;
+}
 
 
 .default-page-bg{
